# Vortice.Windows

./: .gitignore  CMakeLists.txt  CPP_REFACTOR_REPORT.md  CPP_REFACTOR_SUMMARY.md  README.md  REFACTOR_COMPLETE.md  final_converter.py  full_cpp_converter.py  generate_cmake.py  improved_converter.py  refactor_to_cpp.py  refactor_to_cpp_full.py  robust_converter.py  test_convert.py
cpp_refactored_v2/: CMakeLists.txt  README.md
cpp_refactored_v2/Vortice.D3DCompiler/: Compiler.h
cpp_refactored_v2/Vortice.DXGI/: DXGI.h  IDXGIAdapter.h  IDXGIDecodeSwapChain.h  IDXGIDevice.h  IDXGIDevice1.h  IDXGIDeviceSubObject.h  IDXGIFactory2.h  IDXGIFactory4.h  IDXGIFactory5.h  IDXGIFactory6.h  IDXGIFactory7.h  IDXGIFactoryMedia.h  IDXGIObject.h  IDXGIOutput.h  IDXGIOutput1.h  IDXGIOutput3.h  IDXGIOutput4.h  IDXGIOutput5.h  IDXGIOutputDuplication.h  IDXGISurface.h  IDXGISurface2.h  IDXGISwapChain.h  IDXGISwapChain1.h  IDXGISwapChain2.h  IDXGISwapChain3.h  IDXGISwapChain4.h  IVirtualSurfaceImageSourceNative.h  IVirtualSurfaceUpdatesCallbackNative.h  PresentParameters.h  SwapChainDescription1.h
cpp_refactored_v2/Vortice.Direct2D1/: ArcSegment.h  BezierSegment.h  BitmapBrushProperties.h  BitmapBrushProperties1.h  BitmapProperties.h  BitmapProperties1.h  BlendDescription.h  BrushProperties.h  CustomEffectAttribute.h  CustomEffectBase.h  CustomEffectFactory.h  CustomEffectPropertyAttribute.h  CustomVertexBufferProperties.h  D2D1.h  Ellipse.h  GradientStop.h  ID2D1Bitmap.h  ID2D1Bitmap1.h  ID2D1ColorContext.h  ID2D1CommandSink.h  ID2D1Device.h  ID2D1DeviceContext.h  ID2D1DrawInfo.h  ID2D1Effect.h  ID2D1EffectContext.h  ID2D1Factory.h  ID2D1Factory1.h  ID2D1Geometry.h  ID2D1GeometryGroup.h  ID2D1Properties.h  ID2D1RenderTarget.h  ID2D1SimplifiedGeometrySink.h  ID2D1SvgElement.h  ID2D1TessellationSink.h  ID2D1TransformNode.h  ImageBrushProperties.h  InputElementDescription.h  LinearGradientBrushProperties.h  NativeFileAccess.h  RadialGradientBrushProperties.h  (+8 more)
cpp_refactored_v2/Vortice.Direct3D11/: BlendDescription.h  BlendDescription1.h  BufferDescription.h  CounterDescription.h  D3D11.Interop.h  D3D11.h  DepthStencilDescription.h  DepthStencilOperationDescription.h  DepthStencilViewDescription.h  ID3D11Buffer.h  ID3D11CommandList.h  ID3D11Device.h  ID3D11Device1.h  ID3D11Device2.h  ID3D11Device3.h  ID3D11Device4.h  ID3D11Device5.h  ID3D11DeviceChild.h  ID3D11DeviceContext.h  ID3D11DeviceContext1.h  ID3D11DeviceContext2.h  ID3D11DeviceContext3.h  ID3D11Fence.h  ID3D11Resource.h  ID3D11Texture1D.h  ID3D11Texture2D.h  ID3D11Texture3D.h  ID3D11VideoContext.h  ID3D11VideoDecoder.h  ID3D11VideoDevice.h  ID3D11VideoDevice1.h  ID3D11VideoDevice2.h  ID3D11VideoProcessorEnumerator.h  IDirect3DDxgiInterfaceAccess.h  InputElementDescription.h  MappedSubresource.h  QueryDescription.h  QueryDescription1.h  RasterizerDescription.h  RasterizerDescription1.h  (+20 more)
cpp_refactored_v2/Vortice.Direct3D12/: AutoBreadcrumbNode.h  AutoBreadcrumbNode1.h  BarrierGroup.h  BlendDescription.h  BuildRaytracingAccelerationStructureDescription.h  BuildRaytracingAccelerationStructureInputs.h  ClearValue.h  CommandQueueDescription.h  CommandSignatureDescription.h  ComputePipelineStateDescription.h  ConstantBufferViewDescription.h  Constants.h  CpuDescriptorHandle.h  D3D12.h  DepthStencilDescription.h  DepthStencilDescription1.h  DepthStencilDescription2.h  DepthStencilOperationDescription.h  DepthStencilOperationDescription1.h  DepthStencilValue.h  DescriptorHeapDescription.h  DescriptorRange.h  DescriptorRange1.h  DispatchArguments.h  DispatchGraphDescription.h  DispatchRaysDescription.h  DrawArguments.h  DrawIndexedArguments.h  DredAllocationNode.h  DredAllocationNode1.h  DredAutoBreadcrumbsOutput.h  DredAutoBreadcrumbsOutput1.h  DredPageFaultOutput.h  DredPageFaultOutput1.h  DxilLibraryDescription.h  DxilSubObjectToExportsAssociation.h  ExistingCollectionDescription.h  ExportDescription.h  GlobalBarrier.h  GlobalRootSignature.h  (+111 more)
cpp_refactored_v2/Vortice.Direct3D9/: AdapterIdentifier.h  D3D9.h  Helpers.h  IDirect3D9.h  IDirect3D9Ex.h  IDirect3DCubeTexture9.h  IDirect3DDevice9.h  IDirect3DDevice9Ex.h  IDirect3DIndexBuffer9.h  IDirect3DQuery9.h  IDirect3DResource9.h  IDirect3DSurface9.h  IDirect3DSwapChain9.h  IDirect3DTexture9.h  IDirect3DVertexBuffer9.h  IDirect3DVertexDeclaration9.h  IDirect3DVolume9.h  IDirect3DVolumeTexture9.h  LARGE_INTEGER.h  Luid.h  PaletteEntry.h  Rect.h  VertexElement.h
cpp_refactored_v2/Vortice.DirectComposition/: DComp.h  IDCompositionDesktopDevice.h  IDCompositionDevice.h  IDCompositionDevice2.h  IDCompositionDevice3.h  IDCompositionSurface.h  IDCompositionSurfaceFactory.h  IDCompositionVisual.h  IDCompositionVisual3.h
cpp_refactored_v2/Vortice.DirectInput/: Attributes.h  Capabilities.h  ConditionSet.h  ConstantForce.h  CustomForce.h  DInput.h  DataFormat.h  DataObjectFormat.h  DeviceImageHeader.h  DeviceInstance.h  DeviceObjectId.h  DeviceObjectInstance.h  EffectFile.h  EffectInfo.h  EffectParameters.h  EnumCreatedEffectsCallback.h  EnumDevicesCallback.h  EnumEffectsCallback.h  EnumEffectsInFileCallback.h  EnumObjectsCallback.h  Envelope.h  IDataFormatProvider.h  IDeviceState.h  IDirectInput8.h  IDirectInputDevice8.h  IDirectInputEffect.h  IStateUpdate.h  InputRange.h  JoystickOffset.h  JoystickState.h  JoystickUpdate.h  KeyboardState.h  KeyboardUpdate.h  MouseOffset.h  MouseState.h  MouseUpdate.h  ObjectDataFormatFlags.h  ObjectGuid.h  ObjectProperties.h  PeriodicForce.h  (+9 more)
cpp_refactored_v2/Vortice.DirectML/: ActivationCeluOperatorDescription.h  ActivationEluOperatorDescription.h  ActivationHardSigmoidOperatorDescription.h  ActivationHardmaxOperatorDescription.h  ActivationIdentityOperatorDescription.h  ActivationLeakyReluOperatorDescription.h  ActivationLinearOperatorDescription.h  ActivationLogSoftmaxOperatorDescription.h  ActivationParameterizedReluOperatorDescription.h  ActivationParametricSoftplusOperatorDescription.h  ActivationReluGradOperatorDescription.h  ActivationReluOperatorDescription.h  ActivationScaledEluOperatorDescription.h  ActivationScaledTanhOperatorDescription.h  BufferBinding.h  (+167 more)
(+3362 files in other folders)
